fixed color contrast in footer

--- a/styles/temples.css
+++ b/styles/temples.css
@@ -135,6 +135,7 @@ main figcaption {
 footer {
     font-size: 1rem;
     background-color: var(--primary-color);
+    color: var(--text-color);
     text-align: center;
     padding: 1em;
     margin-top: 1em;
